--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>loli filmes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+<h1>loli filmes</h1>
 
+
+
+</header>
     
+
 
 
 
