--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<h1>loli filmes</h1>
-<img srcset="logo.jpg" alt="logo">
+<header class="cabeçalho">
+<h1 class="cabeçalho-título">loli filmes</h1>
+<img class="cabeçalho-imagem" src="logo.jpg" alt="imagem do cabeçalho">
 
 
 
