--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header class="cabeçalho">
 <h1 class="cabeçalho-título">loli filmes</h1>
 <img class="cabeçalho-imagem" src="logo.jpg" alt="imagem do cabeçalho">
-
-
+<li class="cabeçalho-lista-item01">nosso objetivo</li>
+<li class="cabeçalho-lista-item02">quem somos</li>
 
 </header>
     
