--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </header>
    <section class="quem somos">
 <div class="quem somos-div">
-<h2 class="quem somos">quem somos</h2>
+<h2 class="quem somos">quem somos>
 <p class="quem-somos-texto1">Nós da lole filmes ganhamos em 1 lugar de melhor sit de filmes em 2024, esperamos que tenha uma esperiência incrivel conosco, bom filme!
 
 
