--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 <h2 class="quem somos">quem somos
 <p class="quem-somos-texto1">Nós da lole filmes ganhamos em 1 lugar de melhor sit de filmes em 2024, esperamos que tenha uma esperiência incrivel conosco, bom filme!
 
+<section class="filmes-serie">
+<h3 class="filmes-para-a-familia-texto">Filmes-para-a-família<\<h3>
+<div class="filme-viva-a-vida-e-uma-festa">
+<p>Viva a vida é uma festa</p>
 
+
+
+<\<section>
 
 
 
