--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <section class="filmes-serie">
 <h3 class="filmes-para-a-familia-texto">Filmes-para-a-família<\<h3>
 <div class="filme-viva-a-vida-e-uma-festa">
-<p>Viva a vida é uma festa</p>
+img class="viva-a-vida-e-uma-festa-imagem"src="viva a vida é umas festa.jpg" alt="filme viva a vida é uma festa"
+<h4>Viva a vida é uma festa</h4>
 
-
+<\div>
 
 <\<section>
 
