--- a/index.html
+++ b/index.html
@@ -27,6 +27,59 @@ img class="viva-a-vida-e-uma-festa-imagem"src="viva a vida é umas festa.jpg" al
 
 <\div>
 
+<section class="filmes-serie">
+<h3 class="filmes-para-a-familia-texto">Filmes-para-a-família<\<h3>
+<div class="well-e">
+img class="well-e-imagem"src="well.e.webp" alt="well.e"
+<h4>Well.e</h4>
+
+<\div>
+
+<section class="filmes-serie">
+<h3 class="procurando-nemo">Filmes-para-a-família<\<h3>
+<div class="fprocurando-nemo">
+img class="procurando-nemo-imagem"src="procurando nemo.webp" alt="procurando nemo"
+<h4>Procurando nemo</h4>
+
+<\div>
+
+<section class="filmes-serie">
+<h3 class="filmes-para-a-familia-texto">Filmes-para-a-família<\<h3>
+<div class="elio">
+img class="elio-imagem"src="elio.jpeg" alt="elio"
+<h4>Elio</h4>
+
+<\div>
+
+<section class="filmes-serie">
+<h3 class="filmes-para-a-familia-texto">Filmes-para-a-família<\<h3>
+<div class="elementos">
+img class="elementos-imagem"src="elementos.jpeg" alt="elementos"
+<h4>elementos</h4>
+
+<\div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <\<section>
 
 
