--- a/index.html
+++ b/index.html
@@ -63,23 +63,10 @@ img class="elementos-imagem"src="elementos.jpeg" alt="elementos"
 
 <\div>
 
+<footer class="rodapé">
+    <img class="rodapé-imagem" src="instagram.png" alt="rodapé-imagem">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</footer>
 
 
 
