--- a/index.html
+++ b/index.html
@@ -63,22 +63,14 @@ img class="elementos-imagem"src="elementos.jpeg" alt="elementos"
 
 <\div>
 
+<\<section>
+
 <footer class="rodapé">
     <img class="rodapé-imagem" src="instagram.png" alt="rodapé-imagem">
+<h4>desenolido por Eloisa</h4>
 
 </footer>
 
 
-
-
-<\<section>
-
-
-
-
-
-
-
-    
 </body>
 </html>
